--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,8 @@
+body
+{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 .pagina
 {
     display: grid;
@@ -9,5 +14,5 @@
 {
     justify-content: center;
     text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: yellow;
 }
