--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,18 +1,44 @@
 body
 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.pagina
+#Titulo-principal
 {
-    display: grid;
-    width: auto;
-    height: auto;
-}
-
-.titular
-{
-    justify-content: center;
-    text-align: center;
     background-color: yellow;
+    border-radius: 2em;
+    text-align: center;
+    font-size: 1.5rem;
+    color: brown;
+}
+
+p, li
+{
+    color: maroon;
+}
+
+li
+{
+    list-style-type: upper-roman;
+}
+
+li.special
+{
+    color: orange;
+    font-weight: bolder;
+}
+
+span.special
+{
+    font-weight: bolder;
+}
+
+.special
+{
+    color: rgb(255, 0, 0);
+}
+
+h2 + p 
+{
+    color: blue;
 }
